gps-parser/gps-parser/logs/hls_run_csim_15083.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser/gps-parser.hlsrun_csim_summary, at Sat Nov 16 20:10:25 2024
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser -config /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg -cmdlineconfig /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser/hls/config.cmdline

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2023.2.1 (64-bit)
  **** SW Build 4070103 on Dec 13 2023
  **** IP Build 4080415 on Thu Dec 14 21:01:57 MST 2023
  **** SharedData Build 4077621 on Mon Dec 11 00:23:44 MST 2023
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2023 Advanced Micro Devices, Inc. All Rights Reserved.

source /tools/Xilinx/Vitis_HLS/2023.2/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/tools/Xilinx/Vitis_HLS/2023.2/bin/unwrapped/lnx64.o/vitis_hls'
INFO: [HLS 200-10] For user 'mark.gross' on host 'ece-lnx-4511c.ad.ufl.edu' (Linux_x86_64 version 3.10.0-1160.108.1.el7.x86_64) on Sat Nov 16 20:10:27 EST 2024
INFO: [HLS 200-10] On os "Red Hat Enterprise Linux Server release 7.9 (Maipo)"
INFO: [HLS 200-10] In directory '/ecel/UFAD/mark.gross/fnn-gps/gps-parser'
INFO: [HLS 200-1909] Reading HLS ini file /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg
INFO: [HLS 200-1909] Reading HLS ini file /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser/hls/config.cmdline
INFO: [HLS 200-2005] Using work_dir /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser 
INFO: [HLS 200-1510] Running: open_project /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser -diskless 
INFO: [HLS 200-1510] Running: open_solution hls 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2023.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1510] Running: apply_ini /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg 
INFO: [HLS 200-1909] Reading HLS ini file /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg
INFO: [HLS 200-1465] Applying ini 'syn.file=parser.cpp' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/ecel/UFAD/mark.gross/fnn-gps/gps-parser/parser.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=parser.h' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file '/ecel/UFAD/mark.gross/fnn-gps/gps-parser/parser.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=parser_tb.cpp' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file '/ecel/UFAD/mark.gross/fnn-gps/gps-parser/parser_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=gps_translation' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2023.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7z020clg400-1' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-1'
INFO: [HLS 200-1465] Applying ini 'clock=100' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 100ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' at /ecel/UFAD/mark.gross/fnn-gps/gps-parser/hls_config.cfg(5)
INFO: [HLS 200-1510] Running: apply_ini /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser/hls/config.cmdline 
INFO: [HLS 200-1909] Reading HLS ini file /ecel/UFAD/mark.gross/fnn-gps/gps-parser/gps-parser/hls/config.cmdline
INFO: [HLS 200-1510] Running: csim_design 
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../parser_tb.cpp in debug mode
../../../../parser_tb.cpp: In function ‘gnss_data_t gps_msg_handler(const char*)’:
../../../../parser_tb.cpp:96:3: error: return-statement with no value, in function returning ‘gnss_data_t’ [-fpermissive]
   return;
   ^~~~~~
../../../../parser_tb.cpp:100:9: error: cannot convert ‘gnss_data_t’ to ‘void*’
  memset(gd, 0, sizeof(gnss_data_t));
         ^~
In file included from /tools/Xilinx/Vitis_HLS/2023.2/tps/lnx64/gcc-8.3.0/include/c++/8.3.0/cstring:42,
                 from /tools/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:80,
                 from /tools/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from /tools/Xilinx/Vitis_HLS/2023.2/include/ap_int.h:10,
                 from /tools/Xilinx/Vitis_HLS/2023.2/include/ap_axi_sdata.h:15,
                 from ../../../../parser.h:1,
                 from ../../../../parser_tb.cpp:2:
/usr/include/string.h:62:28: note:   initializing argument 1 of ‘void* memset(void*, int, size_t)’
 extern void *memset (void *__s, int __c, size_t __n) __THROW __nonnull ((1));
                      ~~~~~~^~~
../../../../parser_tb.cpp:105:11: error: base operand of ‘->’ has non-pointer type ‘gnss_data_t’
  memcpy(gd->nmea_rmc, msg, strlen(msg));
           ^~
../../../../parser_tb.cpp: In function ‘void printg(gnss_data_t&)’:
../../../../parser_tb.cpp:127:2: error: ‘println’ was not declared in this scope
  println(gd.hour);
  ^~~~~~~
../../../../parser_tb.cpp:127:2: note: suggested alternative: ‘printg’
  println(gd.hour);
  ^~~~~~~
  printg
../../../../parser_tb.cpp: In function ‘int main()’:
../../../../parser_tb.cpp:145:9: error: ‘gd’ was not declared in this scope
  printg(gd);
         ^~
make: *** [obj/parser_tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 1.28 seconds. CPU system time: 0.17 seconds. Elapsed time: 1.49 seconds; current allocated memory: 0.000 MB.
INFO: [HLS 200-1510] Running: close_project 
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 3.46 seconds. Total CPU system time: 0.45 seconds. Total elapsed time: 3.87 seconds; peak allocated memory: 397.652 MB.
INFO: [Common 17-206] Exiting vitis_hls at Sat Nov 16 20:10:30 2024...
